# AoC_2022

./: CMakeLists.txt
Day1/: Day1.cpp
Day10/: Day10.cpp
Day12/: Day12.cpp  Day12_OOP.cpp  steps.txt
Day18/: Day18.cpp
Day2/: Day2.cpp
Day20/: Day20.cpp
Day25/: Day25.cpp
Day3/: Day3.cpp
Day4/: Day4.cpp
Day5/: Day5.cpp  Day5_2.cpp
Day6/: Day6.cpp
Day7/: Day7.cpp
Day8/: Day8.cpp
Day9/: Day9.cpp
