cmake_minimum_required(VERSION 3.25)
project(aoc2022_cpp)

set(CMAKE_CXX_STANDARD 17)


add_executable(main main.cpp)
add_executable(day1 Day1/Day1.cpp)
add_executable(day2 Day2/Day2.cpp)
add_executable(day3 Day3/Day3.cpp)
add_executable(day4 Day4/Day4.cpp)
add_executable(day5 Day5/Day5.cpp)
add_executable(day6 Day6/Day6.cpp)
add_executable(day7 Day7/Day7.cpp)
add_executable(day8 Day8/Day8.cpp)
