cmake_minimum_required(VERSION 3.25)
project(aoc2022_cpp)

set(CMAKE_CXX_STANDARD 17)


add_executable(day1 Day1/Day1.cpp)
add_executable(day2 Day2/Day2.cpp)
add_executable(day3 Day3/Day3.cpp)
add_executable(day4 Day4/Day4.cpp)
add_executable(day5 Day5/Day5.cpp)
add_executable(day5_2 Day5/Day5_2.cpp)
add_executable(day6 Day6/Day6.cpp)
add_executable(day7 Day7/Day7.cpp)
add_executable(day8 Day8/Day8.cpp)
add_executable(day9 Day9/Day9.cpp)
add_executable(day10 Day10/Day10.cpp)
add_executable(day18 Day18/Day18.cpp)
add_executable(day20 Day20/Day20.cpp)
add_executable(day25 Day25/Day25.cpp)